--- a/package.json
+++ b/package.json
@@ -3,13 +3,22 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon index.js"
   },
   "dependencies": {
+    "@prisma/client": "^5.22.0",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^16.4.5",
     "express": "~4.16.1",
+    "express-rate-limit": "^7.4.1",
     "morgan": "~1.9.1",
-    "nodemon": "^3.1.7"
+    "nodeenv": "^3.0.75",
+    "nodemon": "^3.1.7",
+    "winston": "^3.17.0"
+  },
+  "devDependencies": {
+    "prisma": "^5.22.0"
   }
 }
