--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "bcrypt": "^5.1.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
     "express": "~4.16.1",
     "express-rate-limit": "^7.4.1",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "~1.9.1",
     "nodeenv": "^3.0.75",
     "nodemon": "^3.1.7",
