--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -30,7 +30,8 @@ jobs:
 
     - name: Push to Google Container Registry
       run: |
-        echo ${{ secrets.GCP_SA_KEY }} | gcloud auth activate-service-account --key-file=-
+        echo "${{ secrets.GCP_SA_KEY }}" > gcp-key.json
+        gcloud auth activate-service-account --key-file=gcp-key.json
         gcloud --quiet config set project ${{ secrets.GCP_PROJECT_ID }}
         gcloud --quiet auth configure-docker
         docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/stunby-staging:$GITHUB_SHA
