--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -24,15 +24,26 @@ jobs:
     - name: Generate Prisma Client
       run: npx prisma generate
 
+    - name: Authenticate with Google Cloud
+      env:
+        GCS_CREDENTIAL_PATH: gs://stunby-bucket/credential.json
+      run: |
+        echo "${{ secrets.GCP_SA_KEY }}" > gcp-key.json
+        gcloud auth activate-service-account --key-file=gcp-key.json
+        gcloud --quiet config set project ${{ secrets.GCP_PROJECT_ID }}
+
+        # Download credential file from GCS
+        gsutil cp $GCS_CREDENTIAL_PATH ./gcp-key.json
+
+        # Re-authenticate with downloaded credential
+        gcloud auth activate-service-account --key-file=gcp-key.json
+
     - name: Build Docker image
       run: |
         docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/stunby-staging:$GITHUB_SHA .
 
     - name: Push to Google Container Registry
       run: |
-        echo "${{ secrets.GCP_SA_KEY }}" > gcp-key.json
-        gcloud auth activate-service-account --key-file=gcp-key.json
-        gcloud --quiet config set project ${{ secrets.GCP_PROJECT_ID }}
         gcloud --quiet auth configure-docker
         docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/stunby-staging:$GITHUB_SHA
 
