--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -28,14 +28,11 @@ jobs:
       env:
         GCS_CREDENTIAL_PATH: gs://stunby-bucket/credential.json
       run: |
-        echo "${{ secrets.GCP_SA_KEY }}" > gcp-key.json
-        gcloud auth activate-service-account --key-file=gcp-key.json
+        gcloud auth activate-service-account --key-file=/dev/null
         gcloud --quiet config set project ${{ secrets.GCP_PROJECT_ID }}
 
-        # Download credential file from GCS
         gsutil cp $GCS_CREDENTIAL_PATH ./gcp-key.json
 
-        # Re-authenticate with downloaded credential
         gcloud auth activate-service-account --key-file=gcp-key.json
 
     - name: Build Docker image
