--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -23,36 +23,32 @@ jobs:
 
     - name: Generate Prisma Client
       run: npx prisma generate
+      
+    - name: Set Docker image tag
+        id: set_tag
+        run: echo "::set-output name=tag::${GITHUB_REF#refs/tags/}"
 
-    - name: Authenticate with Google Cloud
-      env:
-        GCS_CREDENTIAL_PATH: gs://stunby-bucket/credential.json
-      run: |
-        # Autentikasi awal dengan akun default (asumsikan runner sudah memiliki akses)
-        gcloud auth login --quiet
-
-        # Konfigurasikan project
-        gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
-
-        # Unduh file kredensial dari GCS
-        gsutil cp $GCS_CREDENTIAL_PATH ./gcp-key.json
-
-        # Gunakan file yang diunduh untuk autentikasi ulang
-        gcloud auth activate-service-account --key-file=gcp-key.json
+    - name: Set up Google Cloud SDK
+        uses: google-github-actions/setup-gcloud@v0.3.0
+        with:
+          service_account_email: ${{ secrets.GCP_SA_EMAIL }}
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          export_default_credentials: true
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
 
     - name: Build Docker image
       run: |
-        docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/stunby-staging:$GITHUB_SHA .
+        docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/stunby-staging:${{ steps.set_tag.outputs.tag }} .
 
     - name: Push to Google Container Registry
       run: |
         gcloud --quiet auth configure-docker
-        docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/stunby-staging:$GITHUB_SHA
+        docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/stunby-staging:${{ steps.set_tag.outputs.tag }}
 
     - name: Deploy to Cloud Run
       run: |
         gcloud run deploy stunby-staging \
-          --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/stunby-staging:$GITHUB_SHA \
+          --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/stunby-staging:${{ steps.set_tag.outputs.tag }} \
           --region ${{ secrets.GCP_REGION }} \
           --platform managed \
           --allow-unauthenticated \
