--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -21,9 +21,12 @@ jobs:
     - name: Install dependencies
       run: npm install
 
+    - name: Run Prisma Migrations
+      run: npx prisma migrate deploy
+
     - name: Generate Prisma Client
       run: npx prisma generate
-      
+    
     - name: Set up Google Cloud SDK
       uses: google-github-actions/setup-gcloud@v0.3.0
       with:
