--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon --legacy-watch index.js"
+    "start": "nodemon  index.js"
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
