--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Push to Google Container Registry
         run: |
           gcloud --quiet auth configure-docker
-          docker push asia.gcr.io/${{ secrets.GCP_PROJECT_ID }}/stunby-staging:$GITHUB_SHA
+          docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/stunby-staging:$GITHUB_SHA
 
       - name: Deploy to Cloud Run
         run: |
