--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -4,47 +4,41 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
+  
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    permissions:
+      contents: "read"
+      id-token: "write"
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - name: Google Auth
+        uses: "google-github-actions/auth@v1"
         with:
-          node-version: 20
+          credentials_json: "${{ secrets.GCP_SA_KEY }}"
 
-      - name: Install dependencies
-        run: npm install
+      - name: Set up Cloud SDK
+        uses: "google-github-actions/setup-gcloud@v1"
 
-      - name: Generate Prisma Client
-        run: npx prisma generate
+      - name: Authenticate Docker with GCP
+        run: gcloud auth configure-docker
 
-      - name: Set up Google Cloud SDK
-        uses: google-github-actions/setup-gcloud@v0.3.0
-        with:
-          service_account_email: ${{ secrets.GCP_SA_EMAIL }}
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
-          export_default_credentials: true
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
-
-      - name: Build Docker image
+      - name: Build and Push Docker Image
         run: |
-          docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/stunby-app:$GITHUB_SHA .
-
-      - name: Push to Google Container Registry
-        run: |
-          gcloud --quiet auth configure-docker
-          docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/stunby-app:$GITHUB_SHA
+          IMAGE_NAME="gcr.io/${{ secrets.GCP_PROJECT_ID }}/stunby-app"
+          docker build -t $IMAGE_NAME:latest .
+          docker push $IMAGE_NAME:latest
 
       - name: Deploy to Cloud Run
         run: |
           gcloud run deploy stunby-app \
-            --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/stunby-app:$GITHUB_SHA \
+            --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/stunby-app:latest \
             --region ${{ secrets.GCP_REGION }} \
             --platform managed \
             --allow-unauthenticated \
